2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "2048-deployment"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 5
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
        - image: 851725559636.dkr.ecr.eu-central-1.amazonaws.com/test:2
          imagePullPolicy: Always
          name: "2048"
          ports:
            - containerPort: 80
              protocol: TCP
